--- a/4 семестр/ЛР №6/index.html
+++ b/4 семестр/ЛР №6/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Название веб-сайта</title>
+    <title>Website name</title>
 </head>
 <body>
-    <h1>Текст...</h1>
+    <h1>Website says 'Hi!'</h1>
 </body>
 </html>
